# loja

./: .env  .gitignore  alembic.ini  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/loja/: main.py
src/loja/controllers/: customer.py  customer_controller.py  order.py  product.py  products_controller.py  stock.py  stock_controller.py
src/loja/converters/: address.py  order.py  product.py
src/loja/dtos/: address.py  address_dto.py  order.py  product.py
src/loja/infra/: database.py  payment_client.py  settings.py
src/loja/models/: add_product.py  address.py  customer.py  order.py  order_item.py  product.py  stock.py
src/loja/repositories/: customer.py  customer_dao.py  order.py  product.py  product_dao.py  stock.py  stock_dao.py
src/migrations/: env.py
src/migrations/versions/: 267fa0299cb7_add_customer_and_addresses_table.py  2be110d333f1_add_order_tables.py  49e791333a18_add_the_column_created_at_in_products_.py  58fc4d3197f6_create_products_table.py  88359808368e_add_stock_table.py  f72fad229571_add_name_column_of_customer.py
tests/: test_loja.py
tests/loja/controller/: test_customer_controller.py  test_order_controller.py  test_products_controller.py  test_stock_controller.py
tests/loja/factories/: address.py  address_factory.py  customer.py  customer_factory.py  order.py  order_item.py  product.py  product_controller_factory.py  product_factory.py  stock.py
tests/loja/models/: test_add_product.py  test_address.py  test_customer.py  test_order.py  test_product.py  test_stock.py
tests/loja/repositories/: test_product_dao.py  (+2 more)
